--- a/css/custom.css
+++ b/css/custom.css
@@ -405,7 +405,7 @@ nav ul li ul li a {
 /* Services
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
 .services {
-  background-color: #fff;
+  background-color: #f2f2f2;
 }
 
 /* Work
@@ -445,17 +445,26 @@ a:hover.item-link {
   margin-bottom: 0;
 }
 
+/* SERVICES
+–––––––––––––––––––––––––––––––––––––––––––––––––– */
+.services ul {
+  list-style: none;
+}
+
+.service-icon  {
+  text-align: center;
+  margin: 10px auto;
+  color: #fb5958;
+}
+
 /* CTA
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
 .CTA {
-  min-height:100%;
+  background-color: #fff;
+  /* min-height:100%;
   background:linear-gradient(0deg,rgba(70,63,63,0.6),rgba(70,63,63,0.6)),url(../img/code.jpg);
   background-size:cover;
-  background-attachment: fixed;
-}
-
-.CTA h4 {
-  color: #fff;
+  background-attachment: fixed; */
 }
 
 /* Footer
