Styled up the footer social icons.

--- a/css/custom.css
+++ b/css/custom.css
@@ -471,35 +471,24 @@ a:hover.item-link {
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
 footer {
   background-color: #463f3f;
-  padding-top: 60px;
-  padding-bottom: 60px;
+  padding: 60px 0;
 }
 
-.copyright h6 {
+footer h6 {
   font-size: 0.8em;
   font-weight: 400;
-  line-height: 1.6;
-  color: #fff;
-  padding-bottom: 0;
+  color: #999;
+  margin-top: 15px;
 }
 
-.social-links {
-  padding: 0px 15px;
-}
-
-.social-links a {
-  display: inline-block;
-  background-color: #fff;
-  color: black;
+footer .fa {
   margin: 0 5px;
-  height: 35px;
-  width: 35px;
-  border-radius: 50px;
-  font-size: 1em;
-  line-height: 2;
-  text-decoration: none;
 }
 
-.social-links a:hover {
-  background-color: #fb5958;
+a.social-icon {
+  color: #d6d6d6;
+}
+
+a.social-icon:hover {
+  color: #fb5958;
 }
