--- a/css/custom.css
+++ b/css/custom.css
@@ -337,13 +337,13 @@ nav ul li ul li a {
   border-radius: 4px; }
 }
 
+/* WHY CAN'T I DELETE THE SELECTOR and DECLARATION BELOW? */
 .hero {
 }
 
 .window {
   background-color: #ccc;
   border-radius: 5px;
-  margin: 0 auto;
   padding-top: 15px;
   box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
   /* Material Design Shadow → https://codepen.io/sdthornton/pen/wBZdXq */
@@ -385,7 +385,7 @@ nav ul li ul li a {
     100% { opacity:1; }
 }
 
-/* About
+/* About Section
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
 #about .expertise-block img {
     width: auto;
@@ -501,7 +501,7 @@ a.social-icon:hover {
   color: #45979E;
 }
 
-/* ABOUT PAGE
+/* About Page
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
 .hero-about {
   background-image: url(../img/bkg/gray.svg);
@@ -512,7 +512,7 @@ a.social-icon:hover {
 }
 
 .hero-about, h1 {
-  color: #63D6E0;
+  color: #63D6E0  ;
   font-weight: normal;
 }
 
