Added id to hero greeting on index.html

--- a/css/custom.css
+++ b/css/custom.css
@@ -499,7 +499,7 @@ a.social-icon:hover {
   padding-bottom: 0;
 }
 
-.hero-about h1 {
+#hero-greeting {
   color: #63D6E0  ;
   font-weight: normal;
   margin-bottom: 0;
