--- a/css/custom.css
+++ b/css/custom.css
@@ -16,6 +16,7 @@ hr {
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
 a {
   color: #111111;
+  transition: all 0.2s linear;
 }
 
 a:hover {
