Adding/revising copy for about.html.

--- a/css/custom.css
+++ b/css/custom.css
@@ -3,16 +3,17 @@ body {
   margin-top: 0;
 }
 
-hr {
-  display: block;
-  height: 1px;
-  border: 0;
-  border-top: 1px solid #111111;
-  margin: 1em 0;
-  padding: 0;
+/* utilities
+–––––––––––––––––––––––––––––––––––––––––––––––––– */
+.u-pull-left {
+  margin-right: 3rem;
 }
 
-/* Links
+.u-pull-right {
+  margin-left: 3rem;
+}
+
+/* links
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
 a {
   color: #111111;
@@ -61,7 +62,7 @@ figure {
   margin: 0;
 }
 
-/* Buttons
+/* buttons
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
 .button.button-primary,
 button.button-primary,
@@ -94,7 +95,7 @@ input[type="button"].button-primary:focus {
   border-color: #00B2C1;
 }
 
-/* Sections
+/* sections
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
 section {
   padding-top: 60px;
@@ -107,7 +108,7 @@ section {
   }
 }
 
-/* Typographic
+/* typographic
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
 body, .article {
   font-family: 'Karla', sans-serif;
