Fiddling with type. 🎻

--- a/css/custom.css
+++ b/css/custom.css
@@ -113,7 +113,6 @@ section {
 body, .article {
   font-family: 'Karla', sans-serif;
   font-size: 2.1em;
-  letter-spacing: .02em;
   line-height: 2;
   /*max-width: 960px;*/
   color: #111111;
@@ -126,6 +125,7 @@ div {
 h1, h2, h3, h4, h5, h6 {
   font-weight: bold;
   letter-spacing: 0;
+  line-height: 1.4;
   margin-bottom: 3rem;
   text-align: center;
 }
