--- a/css/custom.css
+++ b/css/custom.css
@@ -553,6 +553,11 @@ a.social-icon:hover {
   content: "";
 }
 
+.work-image {
+  box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+  transition: all 0.3s cubic-bezier(.25,.8,.25,1);
+}
+
 ul.work-role {
   color: #111111;
   font-size: 1.2rem;
