--- a/css/custom.css
+++ b/css/custom.css
@@ -124,10 +124,6 @@ body, .article {
   color: #111111;
 }
 
-div {
-  display: block;
-}
-
 h1, h2, h3, h4, h5, h6 {
   font-weight: bold;
   letter-spacing: 0;
@@ -521,12 +517,27 @@ a.social-icon:hover {
 
 /* Work Page
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
-.work-showcase {
+#work {
   background-color: #f7f7f7;
+  padding-top: 60px;
+  padding-bottom: 60px;
 }
 
-.work-showcase .row:after {
-  margin-bottom: 50px;
+@media (max-width: 320px) {
+  #work {
+    padding-top: 30px;
+    padding-bottom: 30px;
+  }
+}
+
+section.work-showcase {
+  margin: 0;
+  padding: 0;
+}
+
+.work-showcase {
+  position: relative;
+  overflow: hidden;
 }
 
 .work-showcase .row:last-child:after {
@@ -554,8 +565,11 @@ a.social-icon:hover {
 }
 
 .work-image {
+  width: 100%;
+  position: relative;
   box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
   transition: all 0.3s cubic-bezier(.25,.8,.25,1);
+  margin-top: 1.5rem;
 }
 
 ul.work-role {
