--- a/css/custom.css
+++ b/css/custom.css
@@ -3,16 +3,6 @@ body {
   margin-top: 0;
 }
 
-/* utilities
-–––––––––––––––––––––––––––––––––––––––––––––––––– */
-.u-pull-left {
-  padding-right: 3rem;
-}
-
-.u-pull-right {
-  padding-left: 3rem;
-}
-
 /* links
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
 a {
@@ -539,6 +529,15 @@ section.work-showcase {
   margin-bottom: 5px;
 }
 
+.work-showcase .u-pull-right {
+  padding-left: 10px;
+}
+
+.work-showcase .u-pull-left {
+  padding-right: 10px;
+  margin-left: 0;
+}
+
 .work-role {
   margin-bottom: 20px;
 }
@@ -582,3 +581,4 @@ ul.work-role {
   background-color: #f7f7f7;
   padding: 1em;
 }
+
